2008-04-22  Ilkka Tuohela <hile@iki.fi>

	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
	* docs/fi: Added fi to DOC_LINGUAS

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Use new gweather-xml API. Patch by Dan Winship <danw@gnome.org>.
	Fix bug #526216.

	* gweather-xml.c: gone, moved to libgweather

	* gweather-pref.c: Use libgweather's version of the Locations.xml
	parser now.
	(load_locations): Update for API changes, select the correct row
	after constructing the model, since the new
	gweather_xml_load_locations() doesn't do that automatically.

2008-02-29  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* docs/pt_BR/figures/*: Added 4 screen shots by Amadeu A. Barbosa Jr.

2008-02-29  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* docs/Makefile.am: Added pt_BR do DOC_LINGUAS.
	* docs/pt_BR/pt_BR.po: Added Brazilian Portuguese translation by
	Amadeu A. Barbosa Júnior.

2008-02-26  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* docs/Makefile.am:
	* docs/ru/ru.po: Added Russian translation by 
	Yuri Myasoedov <omerta13@yandex.ru>

2008-02-11  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.

2008-01-29  Claude Paroz  <claude@2xlibre.net>

	* docs/fr/fr.po: Updated French translation.

2008-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gweather-xml.c (gweather_xml_load_locations): Use the correct
	location for the Locations file. libgweather changed API on
	us. (Fixes bug #509750.)

2008-01-15  Callum McKenzie  <callum@spooky-possum.org>

	* main.c: 
	* gweather-pref.c: 
	* gweather-pref.h: 
	* gweather-dialog.c: 
	* gweather-dialog.h: 
	* gweather-applet.c: 
	* gweather-applet.h: 
	* gweather-about.c: 
	* gweather-about.h: Add GWEATHER_I_KNOW_THIS_IS_UNSTABLE to enable
	the gweather API.

2008-01-13  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: Move Locations.xml and associated pieces to a new
	module: libgweather.
