@@ -1,9 +1,9 @@
 <Root>
    <popups>
       <popup name="button3">
-         <menuitem name="Item 1" verb="Details" _label="_Details" accel="*Control*d"/>
+         <menuitem name="Item 1" verb="Details" _label="_Details"/>
          <menuitem name="Item 2" verb="Update" _label="_Update"
-                   pixtype="stock" pixname="gtk-refresh" accel="*Control*u"/>
+                   pixtype="stock" pixname="gtk-refresh"/>
       <separator/>
          <menuitem name="Item 3" verb="Props" _label="_Preferences"
                    pixtype="stock" pixname="gtk-properties"/>
