@@ -1,3 +1,9 @@
+2008-04-30  Callum McKenzie  <callum@spooky-possum.org>
+
+	* GNOME_GWeatherApplet.xml: Remove the short-cut keys since they are
+	practically unusable. Fixes bug #530670.
+	* gweather-applet.c: Removed an incorrect comment.
+
 2008-04-22  Ilkka Tuohela <hile@iki.fi>
 
 	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
